; ModuleID = '/home/carl/AnghaBench/lwan/src/samples/techempower/extr_database.c_db_stmt_finalize_sqlite.c'
source_filename = "/home/carl/AnghaBench/lwan/src/samples/techempower/extr_database.c_db_stmt_finalize_sqlite.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.db_stmt = type { i32 }
%struct.db_stmt_sqlite = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.db_stmt*)* @db_stmt_finalize_sqlite to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @db_stmt_finalize_sqlite(%struct.db_stmt* %0) #0 {
  %2 = alloca %struct.db_stmt*, align 8
  %3 = alloca %struct.db_stmt_sqlite*, align 8
  store %struct.db_stmt* %0, %struct.db_stmt** %2, align 8
  %4 = load %struct.db_stmt*, %struct.db_stmt** %2, align 8
  %5 = bitcast %struct.db_stmt* %4 to %struct.db_stmt_sqlite*
  store %struct.db_stmt_sqlite* %5, %struct.db_stmt_sqlite** %3, align 8
  %6 = load %struct.db_stmt_sqlite*, %struct.db_stmt_sqlite** %3, align 8
  %7 = getelementptr inbounds %struct.db_stmt_sqlite, %struct.db_stmt_sqlite* %6, i32 0, i32 0
  %8 = load i32, i32* %7, align 4
  %9 = call i32 @sqlite3_finalize(i32 %8)
  %10 = load %struct.db_stmt_sqlite*, %struct.db_stmt_sqlite** %3, align 8
  %11 = call i32 @free(%struct.db_stmt_sqlite* %10)
  ret void
}

declare dso_local i32 @sqlite3_finalize(i32) #1

declare dso_local i32 @free(%struct.db_stmt_sqlite*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
